Update jetbrick to 1.1.1, webit-script to 1.3.0